update store list layout and remove unneeded elements

--- a/src/app/main/content/webshop/store-list/store-list.component.html
+++ b/src/app/main/content/webshop/store-list/store-list.component.html
@@ -2,10 +2,7 @@
   <div class="top-bg mat-accent-bg"></div>
   <div class="center">
     <div class="header white-fg" fxLayout="row" fxLayoutAlign="space-between center">
-      <div fxLayout="row" fxLayoutAlign="start center">
-        <button class="mr-0 mr-sm-16" mat-icon-button [routerLink]="'/apps/e-commerce/products'">
-          <mat-icon>arrow_back</mat-icon>
-        </button>
+      <div fxFlexOffset="20px" fxLayout="row" fxLayoutAlign="start center">
         <h2>{{title}}</h2>
       </div>
     </div>
@@ -25,8 +22,8 @@
                 </mat-card>
               </a>
           </div>
+      </div>
       <!-- / CONTENT -->
-    </div>
     <!-- / CONTENT CARD -->
   </div>
   <!-- / CENTER -->
