--- a/src/app/main/toolbar/toolbar.component.html
+++ b/src/app/main/toolbar/toolbar.component.html
@@ -21,7 +21,7 @@
             </div>
 
             <div class="px-8 px-mat-16">
-                <fuse-shortcuts></fuse-shortcuts>
+                <!--<fuse-shortcuts></fuse-shortcuts>-->
             </div>
 
         </div>
@@ -39,26 +39,26 @@
 
             <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
 
-                <button mat-menu-item>
-                    <mat-icon>account_circle</mat-icon>
-                    <span>My Profile</span>
-                </button>
+                <!--<button mat-menu-item>-->
+                    <!--<mat-icon>account_circle</mat-icon>-->
+                    <!--<span>My Profile</span>-->
+                <!--</button>-->
 
-                <button mat-menu-item class="">
-                    <mat-icon>mail</mat-icon>
-                    <span>Inbox</span>
-                </button>
+                <!--<button mat-menu-item class="">-->
+                    <!--<mat-icon>mail</mat-icon>-->
+                    <!--<span>Inbox</span>-->
+                <!--</button>-->
 
-                <button mat-menu-item class="">
-                    <mat-icon>exit_to_app</mat-icon>
-                    <span>Logout</span>
-                </button>
+                <!--<button mat-menu-item class="">-->
+                    <!--<mat-icon>exit_to_app</mat-icon>-->
+                    <!--<span>Logout</span>-->
+                <!--</button>-->
 
             </mat-menu>
 
             <div class="toolbar-separator"></div>
 
-            <fuse-search-bar (onInput)="search($event)"></fuse-search-bar>
+            <!--<fuse-search-bar (onInput)="search($event)"></fuse-search-bar>-->
 
             <div class="toolbar-separator"></div>
 
@@ -90,15 +90,12 @@
                     aria-label="Toggle quick panel">
                 <mat-icon class="icon">format_list_bulleted</mat-icon>
             </button>
-
-          <button mat-icon-button
-                  class="mat-icon-button shopping-cart-toggle-button"
-                  fuseMatSidenavToggler="shopping-cart"
-                  aria-label="Toggle quick panel">
-            <mat-icon class="icon">format_list_bulleted</mat-icon>
-          </button>
-
-
+          <!--<button mat-icon-button-->
+                  <!--class="mat-icon-button shopping-cart-toggle-button"-->
+                  <!--fuseMatSidenavToggler="shopping-cart"-->
+                  <!--aria-label="Toggle quick panel">-->
+            <!--<mat-icon class="icon">format_list_bulleted</mat-icon>-->
+          <!--</button>-->
         </div>
     </div>
 </mat-toolbar>
