update ui and use better classes for shopping cart panel

--- a/src/app/main/content/webshop/store/store.component.html
+++ b/src/app/main/content/webshop/store/store.component.html
@@ -48,8 +48,7 @@
                   </span>
                 </mat-card-content>
                 <mat-card-actions>
-                  <!--<button class="mat-primary compose-dialog-button mat-raised-button mat-button">View</button>-->
-                  <button (click)="addtoCart(product, 1)" class="mat-accent compose-dialog-button mat-raised-button mat-button">Add to Cart</button>
+                  <button mat-button (click)="addtoCart(product, 1)" class="mat-accent compose-dialog-button">Add to Cart</button>
                 </mat-card-actions>
               </mat-card>
           </div>
