--- a/src/app/main/toolbar/toolbar.component.html
+++ b/src/app/main/toolbar/toolbar.component.html
@@ -38,22 +38,20 @@
             </button>
 
             <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
+                <button mat-menu-item>
+                    <mat-icon>account_circle</mat-icon>
+                    <span>My Profile</span>
+                </button>
 
-                <!--<button mat-menu-item>-->
-                    <!--<mat-icon>account_circle</mat-icon>-->
-                    <!--<span>My Profile</span>-->
-                <!--</button>-->
+                <button mat-menu-item class="">
+                    <mat-icon>mail</mat-icon>
+                    <span>Inbox</span>
+                </button>
 
-                <!--<button mat-menu-item class="">-->
-                    <!--<mat-icon>mail</mat-icon>-->
-                    <!--<span>Inbox</span>-->
-                <!--</button>-->
-
-                <!--<button mat-menu-item class="">-->
-                    <!--<mat-icon>exit_to_app</mat-icon>-->
-                    <!--<span>Logout</span>-->
-                <!--</button>-->
-
+                <button mat-menu-item class="">
+                    <mat-icon>exit_to_app</mat-icon>
+                    <span>Logout</span>
+                </button>
             </mat-menu>
 
             <div class="toolbar-separator"></div>
@@ -72,14 +70,12 @@
             </button>
 
             <mat-menu #languageMenu="matMenu" [overlapTrigger]="false">
-
                 <button mat-menu-item *ngFor="let lang of languages" (click)="setLanguage(lang)">
                     <div fxLayout="row" fxLayoutAlign="start center">
                         <img class="flag mr-16" [src]="'assets/images/flags/'+lang.flag+'.png'">
                         <span class="iso">{{lang.title}}</span>
                     </div>
                 </button>
-
             </mat-menu>
 
             <div class="toolbar-separator" fxHide fxShow.gt-xs></div>
@@ -88,14 +84,8 @@
                     class="mat-icon-button quick-panel-toggle-button"
                     fuseMatSidenavToggler="quick-panel"
                     aria-label="Toggle quick panel">
-                <mat-icon class="icon">format_list_bulleted</mat-icon>
+                <mat-icon class="icon">shopping_cart</mat-icon>
             </button>
-          <!--<button mat-icon-button-->
-                  <!--class="mat-icon-button shopping-cart-toggle-button"-->
-                  <!--fuseMatSidenavToggler="shopping-cart"-->
-                  <!--aria-label="Toggle quick panel">-->
-            <!--<mat-icon class="icon">format_list_bulleted</mat-icon>-->
-          <!--</button>-->
         </div>
     </div>
 </mat-toolbar>
