--- a/src/app/main/quick-panel/quick-panel.component.html
+++ b/src/app/main/quick-panel/quick-panel.component.html
@@ -39,7 +39,7 @@
   <mat-divider style="margin-bottom: 20px"></mat-divider>
 
   <div style="text-align: center;">
-    <button (click)="Checkout()" class="mat-accent compose-dialog-button mat-raised-button mat-button">Checkout</button>
+    <button (click)="checkout(1)" class="mat-accent compose-dialog-button mat-raised-button mat-button">Checkout</button>
   </div>
 </div>
 
