--- a/src/app/main/content/e-commerce/orders/orders.component.html
+++ b/src/app/main/content/e-commerce/orders/orders.component.html
@@ -115,7 +115,7 @@
                 <mat-row *cdkRowDef="let order; columns: displayedColumns;"
                          class="order"
                          matRipple
-                         [routerLink]="'/apps/e-commerce/orders/'+order.id">
+                         [routerLink]="'/e-commerce/orders/'+order.id">
                 </mat-row>
             </mat-table>
 
