--- a/src/app/main/content/e-commerce/product/product.component.html
+++ b/src/app/main/content/e-commerce/product/product.component.html
@@ -13,7 +13,7 @@
             <!-- APP TITLE -->
             <div fxLayout="row" fxLayoutAlign="start center">
 
-                <button class="mr-0 mr-sm-16" mat-icon-button [routerLink]="'/apps/e-commerce/products'">
+                <button class="mr-0 mr-sm-16" mat-icon-button [routerLink]="'/e-commerce/products'">
                     <mat-icon>arrow_back</mat-icon>
                 </button>
 
