Add total cel to checkout page

--- a/src/app/main/content/webshop/checkout/checkout.component.html
+++ b/src/app/main/content/webshop/checkout/checkout.component.html
@@ -81,6 +81,16 @@
                   </td>
                 </tr>
                 </tbody>
+                <tfoot>
+                  <tr class="product-row">
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th>total</th>
+                  </tr>
+                </tfoot>
               </table>
             </div>
 
