--- a/src/@fuse/scss/partials/_material.scss
+++ b/src/@fuse/scss/partials/_material.scss
@@ -449,6 +449,28 @@ table {
             }
         }
 
+      tfoot {
+
+        tr {
+
+          th {
+            padding: 16px 8px;
+            font-weight: 500;
+            color: rgba(0, 0, 0, 0.54);
+            border-top: 1px solid rgba(0, 0, 0, 0.12);
+            white-space: nowrap;
+
+            &:first-child {
+              padding-left: 24px;
+            }
+
+            &:last-child {
+              padding-right: 24px;
+            }
+          }
+        }
+      }
+
         &.clickable {
 
             tbody {
