--- a/src/app/main/content/webshop/store/store.component.html
+++ b/src/app/main/content/webshop/store/store.component.html
@@ -41,7 +41,7 @@
                 </a>
                 <mat-card-content>
                   <span class="product-card-price">
-                    {{product.activePrice | currency}}
+                    {{product.price | currency}}
                     <!--<span class="product-card-old-price">($20,00)</span>-->
                   </span>
                 </mat-card-content>
