--- a/src/app/main/content/e-commerce/products/products.component.html
+++ b/src/app/main/content/e-commerce/products/products.component.html
@@ -82,7 +82,7 @@
                     <mat-header-cell *cdkHeaderCellDef fxHide mat-sort-header fxShow.gt-md>Category</mat-header-cell>
                     <mat-cell *cdkCellDef="let product" fxHide fxShow.gt-md>
                         <p class="category text-truncate">
-                            {{product.categories}}
+                            {{product.categories | formatJsonArray}}
                         </p>
                     </mat-cell>
                 </ng-container>
