--- a/src/app/main/content/e-commerce/product/product.component.html
+++ b/src/app/main/content/e-commerce/product/product.component.html
@@ -121,13 +121,9 @@
                                            [matChipInputFor]="tagList"/>
                                 </mat-form-field>
 
-                              <mat-form-field class="w-100-p">
-                                <input matInput
-                                       name="active"
-                                       formControlName="active"
-                                       placeholder="Active"
-                                       required>
-                              </mat-form-field>
+                              <div class="w-100-p">
+                                <mat-slide-toggle name="active" formControlName="active" required></mat-slide-toggle>
+                              </div>
                             </div>
                         </mat-tab>
 
